@@ -3,6 +3,7 @@
 * Add support for upgrading a PayPal future payment refresh token to a billing agreement
 * Fix spec to expect PayPal transaction to settle immediately after successful capture
 * Add GrantedPaymentInstrumentUpdate webhook support
+* Add ability to create a transaction from a shared nonce
 
 == 2.78.0
 * Support `eci_indicator` for Transaction#sale with raw Apple Pay parameters
